[project]
name = "tea"
version = "0.1.0"
dependencies = [
    "biotite>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.52.4",
    "huggingface_hub>=0.32.4",
    "bitsandbytes",
    "tqdm>=4.67.1",
    "numpy>=2.2.0",
    "accelerate>=1.7.0",
]
description = "The Embedded Alphabet"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PickyBinders/tea"
Issues = "https://github.com/PickyBinders/tea/issues"

[project.scripts]
tea_convert = "tea.convert:main"

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tea*"]
namespaces = false

[tool.setuptools.package-data]
tea = ["matcha.out"]